# Tic_Tac_Toe_C--_Game

./: CMakeLists.txt  readme.md
include/: ai.h  board.h  game.h
src/: ai.cpp  board.cpp  game.cpp  gui.cpp  main.cpp
